minor layout issue
Former-commit-id: 53d82e4c25f397b3b7b437310247a3c04f09ad1d
Former-commit-id: 1c4d612ea65dc5c9693241c22a5b8cf9cd3ac689
Former-commit-id: b9a154cda3a4e4b2526c49eca894819d879b6083
Former-commit-id: ed193688028ad1df7bc512c2607a132071c10dda
Former-commit-id: c4edb67e2bfd3bd25c7308459cee6f00e1751219
Former-commit-id: 893e129c8dbdc34b097a9d5673e361d91d061b0e

--- a/podiobooks/themes/pb2-jq/static/css/ratings.css
+++ b/podiobooks/themes/pb2-jq/static/css/ratings.css
@@ -1,13 +1,14 @@
 .rating-instructions{
-	margin:0 0 .3em;
+	margin:1em 0 .3em;
 	font-weight: bold;
 	font-size:.9em;
+	text-align: center;
 }
 .rating-widget-wrap{
 	width:100%;
 	float:left;
 	text-align: center;
-	padding:1em 0;
+	padding:0 0 1em;
 }
 .rating-widget{
 	list-style:none;
